--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <input type="email" placeholder="7 (999) 999-99-99" id="phone">
                     <label for="budget">Примерный бюджет</label>
                     <select id="budget">
+                        <option value="" disabled selected style='display:none;'>Выберите из списка</option>
                         <option value="10-30">10 000₽ – 30 000₽</option>
                         <option value="30-60">30 000₽ – 60 000₽</option>
                         <option value="60-100">60 000₽ – 100 000₽</option>
@@ -49,6 +50,32 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__group">
+                <h3>Позвонить нам:</h3>
+                <div class="footer__links">
+                  <a href="tel:74959999999">+7 (495) 999-99-99</a>
+                </div>
+            </div>
+            <div class="footer__group">
+                <h3>Решения для дома:</h3>
+                <div class="footer__links">
+                  <a href="#">Солнечные панели GreenRobotic</a>
+                  <a href="#">Системы солнечных панелей GreenStation</a>
+                </div>
+            </div>
+            <div class="footer__group">
+                <h3>Компания</h3>
+                <div class="footer__links">
+                  <a href="#">Контакты</a>
+                  <a href="#">Вакансии</a>
+                  <a href="#">СМИ</a>
+                </div>
+            </div>  
+        </div>
+        <div class="footer__copyright">GreenCorp © 2021</div>
+    </footer>
 
 </body>
 </html>
