--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="ru">
 <head>
     <title>Солнечные батареи GreenCorp</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -14,12 +17,12 @@
         </div>
     </header>
     <section class="about">
-        <div class="about__info">
+        <div class="about__info animate__animated animate__fadeInLeft animate__slow">
             <h1>Солнечные панели GreenRobotic</h1>
             <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-            <button>Узнать подробнее</button>
+            <button>Узнать подробнее<i class="fa-solid fa-angle-right"></i></button>
           </div>
-          <div class="about__images">
+          <div class="about__images animate__animated animate__fadeInRight animate__slow">
             <img class="about__sun-image" src="img/sun.png">
             <img class="about__image" src="img/solar-panel.png">
           </div>
